# solana-crowdfunding

./: .gitignore  README.md
app/src/: main.rs
client/: borshTest.js  index.js  package.json
solana-react-app/: package-lock.json  package.json
src/crowdfuding/src/: lib.rs
src/crowdfunding/: Cargo.toml
src/crowdfunding/src/: lib.rs
src/crowdfunding/test-ledger/: faucet-keypair.json  genesis.bin.failed  genesis.tar.bz2  genesis.tar.bz2.failed  validator-keypair.json  vote-account-keypair.json
src/crowdfunding/test-ledger/rocksdb/: 000052.sst  000053.sst  000054.sst  000055.sst  000056.sst  000057.sst  000058.sst  IDENTITY  LOG  LOG.old.1696495494309493  MANIFEST-000060
src/crowdfunding/test-ledger/rocksdb.failed/: IDENTITY  LOG
