[package]
name = "crowdfuding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.9.9"

[dev-dependencies]
solana-program = "1.9.9"
solana-sdk = "1.9.9"

[lib] # this is a configuration for our lib that determines our config
crate-type = ["cdylib", "lib"]
